# Password-Manager-Rust

./: .gitignore  README.md
password-manager/: Cargo.toml
src/: main.rs
